--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,26 @@ img {
 .social-logo i{
     font-size: 30px;
 }
+/* ===== CONTACT =====*/
+.contact__input {
+    width: 100%;
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-semi);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1.5px solid var(--second-color);
+    outline: none;
+    margin-bottom: var(--mb-4);
+}
 
+.contact__button {
+    display: block;
+    border: none;
+    outline: none;
+    font-size: var(--normal-font-size);
+    cursor: pointer;
+    margin: auto;
+}
 /* ===== MEDIA QUERIES =====*/
 @media screen and (max-width: 320px) {
     .home {
